--- a/src/pages/first-entry.mdx
+++ b/src/pages/first-entry.mdx
@@ -3,19 +3,31 @@ title: First entry
 ---
 
 import { Button } from '@chakra-ui/react'
-import MdxLayout from '../components/mdx-layout'
+import { MdCheckCircle, MdSettings } from 'react-icons/md'
 
-<Layout>
-
-<h1>Título</h1>
+# Título
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-- Lorem
-- ipsum
-- dolor
-- sit
-- amet
+<List spacing={3}>
+  <ListItem>
+    <ListIcon as={MdCheckCircle} color="green.500" />
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit
+  </ListItem>
+  <ListItem>
+    <ListIcon as={MdCheckCircle} color="green.500" />
+    Assumenda, quia temporibus eveniet a libero incidunt suscipit
+  </ListItem>
+  <ListItem>
+    <ListIcon as={MdCheckCircle} color="green.500" />
+    Quidem, ipsam illum quis sed voluptatum quae eum fugit earum
+  </ListItem>
+  {/* You can also use custom icons from react-icons */}
+  <ListItem>
+    <ListIcon as={MdSettings} color="green.500" />
+    Quidem, ipsam illum quis sed voluptatum quae eum fugit earum
+  </ListItem>
+</List>
 
 # Compra
 
@@ -32,5 +44,3 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 2. Bimbolina
 
 <Button>Hola</Button>
-
-</Layout>
